responsive mobile (fix white space on right site)

--- a/src/styles.css
+++ b/src/styles.css
@@ -115,7 +115,6 @@ body {
 }
 
 .tags{
-    
     font-size: 14px;
     color: #2C75D6;
     font-style:normal;
@@ -125,11 +124,11 @@ body {
     border-radius: 12px;
     text-decoration: none;
     width: fit-content;
-    line-height: 250%;
+    line-height: 150%;
     border-color: #000000;
     border-style:solid;
     border-width: 0.1cap;
-    
+    display:inline-flex;
   }
 
   .tags:hover{
@@ -167,5 +166,12 @@ body {
         padding: 50px;
     }
 }
-html, body { height: 100%; }
+
+html, body { 
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+ }
 body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
